--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,44 @@
 altgraph==0.17.4
+attrs==25.3.0
 beautifulsoup4==4.13.3
+cattrs==24.1.3
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 colorthief==0.2.1
 darkdetect==0.8.0
+debugpy==1.8.14
+docstring-to-markdown==0.16
 et_xmlfile==2.0.0
 idna==3.10
+importlib_metadata==8.6.1
+jedi==0.19.2
+lsprotocol==2023.0.1
 lxml==5.3.1
 numpy==2.2.3
 openpyxl==3.1.5
+ordered-set==4.1.0
 packaging==24.2
+parso==0.8.4
 pefile==2023.2.7
 pillow==11.1.0
+pluggy==1.5.0
+pycparser==2.22
 PyQt-Fluent-Widgets==1.7.5
 PyQt5==5.15.11
 PyQt5-Frameless-Window==0.4.5
 PyQt5-Qt5==5.15.2
 PyQt5_sip==12.17.0
+python-lsp-jsonrpc==1.1.2
+python-lsp-ruff==2.2.2
+python-lsp-server==1.12.2
 requests==2.32.3
 scipy==1.15.2
 setuptools==75.8.2
 soupsieve==2.6
 typing_extensions==4.12.2
+ujson==5.10.0
 urllib3==2.3.0
+xcffib==1.7.1
+zipp==3.21.0
+zstandard==0.23.0
