--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,22 @@
 beautifulsoup4==4.13.4
 certifi==2025.4.26
-cffi==1.17.1
-charset-normalizer==3.4.1
+charset-normalizer==3.4.2
+colorthief==0.2.1
 darkdetect==0.8.0
-debugpy==1.8.14
 et_xmlfile==2.0.0
 idna==3.10
 lxml==5.4.0
+numpy==2.2.5
 openpyxl==3.1.5
-pycparser==2.22
+pillow==11.2.1
 PyQt-Fluent-Widgets==1.7.7
 PyQt5==5.15.11
 PyQt5-Frameless-Window==0.6.0
-PyQt5-Qt5==5.15.16
+PyQt5-Qt5==5.15.2
 PyQt5_sip==12.17.0
+pywin32==310
 requests==2.32.3
+scipy==1.15.2
 soupsieve==2.7
 typing_extensions==4.13.2
 urllib3==2.4.0
-xcffib==1.8.0
