--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@ __pycache__/
 .env
 venv
 env
-.build_venv
 
 # C extensions
 *.so
@@ -160,3 +159,4 @@ fabric.properties
 excels/
 windows/__pycache__
 scripts/__pycache__
+installer
