--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.4
 beautifulsoup4==4.13.4
 certifi==2025.4.26
 charset-normalizer==3.4.2
@@ -8,15 +9,22 @@ idna==3.10
 lxml==5.4.0
 numpy==2.2.5
 openpyxl==3.1.5
+packaging==25.0
+pefile==2023.2.7
 pillow==11.2.1
+pyinstaller==6.13.0
+pyinstaller-hooks-contrib==2025.3
 PyQt-Fluent-Widgets==1.7.7
 PyQt5==5.15.11
 PyQt5-Frameless-Window==0.6.0
 PyQt5-Qt5==5.15.2
 PyQt5_sip==12.17.0
 pywin32==310
+pywin32-ctypes==0.2.3
 requests==2.32.3
 scipy==1.15.2
+setuptools==80.2.0
 soupsieve==2.7
 typing_extensions==4.13.2
 urllib3==2.4.0
+zstandard==0.23.0
